<resources>
    <string name="app_name">移动办公</string>
    <string name="app_dahua">大华股份移动办公</string>
    <string name="system_setting">系统设置</string>
    <string name="system_setting_notice">通知栏信息</string>
    <string name="system_setting_checkupdate">检查更新</string>
    <string name="system_setting_help">使用帮助</string>
    <string name="system_setting_version">版本信息</string>
    <string name="system_setting_upload">乘客信息自动上传</string>
    <string name="soft_update_title">系统提示</string>
    <string name="soft_update_no">您当前已经是最新版本</string>
    <string name="soft_update_cannotget">无法获取版本更新信息</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">以后再说</string>
    <string name="soft_updating">正在下载新版本</string>
    <string name="soft_update_sure">确定</string>
    <string name="soft_update_cancel">取消</string>
    <string name="soft_update_sdcard">无法下载安装文件，请检查SD卡是否挂载</string>
    <string name="useinfo_login">用户登录</string>
    <string name="useinfo_login_detail">使用工号和域账户密码登陆</string>
    <string name="useinfo_login_account">工号：</string>
    <string name="useinfo_login_password">密码：</string>
    <string name="useinfo_login_submit">登陆</string>
    <string name="useinfo_login_cancle">取消</string>
    <string name="useinfo_login_isremember">记住我的登陆信息</string>
    <string name="useinfo_login_tipusername">请输入员工号</string>
    <string name="useinfo_login_tippassword">请输入密码</string>
    <string name="useinfo_login_success">登陆成功</string>
    <string name="useinfo_login_faile">登陆失败</string>
    <string name="lock_verify_faile">验证失败，该员工不存在或已离职</string>
    <string name="tasklist_list_netparseerror">没有待审批任务记录</string>
    <string name="tasklist_history_netparseerror">没有已审批任务记录</string>
    <string name="tasklist_main">我的任务</string>
    <string name="tasklist_ftitle">标题</string>
    <string name="tasklist_list">待审批</string>
    <string name="tasklist_history">审批记录</string>
    <string name="tasklist_fsendtime">发送时间</string>
    <string name="tasklist_fsender">From</string>
    <string name="tasklist_search">search</string>
    <string name="tasklist_notfind">目前暂无该任务功能，请更新软件版本才能查看</string>
    <string name="approve_imgbtnApprove">审批</string>
    <string name="approve_imgbtnApprove_record">审批记录</string>
    <string name="workflow_paramerror">工作流审批内部参数传递失败</string>
    <string name="workflow_netparseerror">获取工作流审批信息数据失败</string>
    <string name="workflow_title">审批流程</string>
    <string name="workflow_been_title">已审批记录</string>
    <string name="workflow_pass">同意</string>
    <string name="workflow_reject">驳回</string>
    <string name="workflow_pass_false">该单据暂无审批功能</string>
    <string name="workflow_reject_false">该单据暂无驳回功能</string>
    <string name="workflow_reject_notEmpty">请填写驳回原因</string>
    <string name="pluscopy_main_title">附加节点</string>
    <string name="pluscopy_main_plus">加签人员</string>
    <string name="pluscopy_main_copy">抄送人员</string>
    <string name="pluscopy_main_content">消息内容</string>
    <string name="plus_main_title">加签审批</string>
    <string name="copy_main_title">抄送审批</string>
    <string name="pluscopy_main_fConfirm">确定</string>
    <string name="pluscopy_main_fCancle">取消</string>
    <string name="pluscopy_main_nodes_error">请选中附加节点</string>
    <string name="pluscopy_main_plus_error">请选择加签人员</string>
    <string name="pluscopy_main_copy_error">请选择抄送人员</string>
    <string name="pluscopy_main_plus_app_result">加签成功</string>
    <string name="pluscopy_main_copy_app_result">抄送成功</string>
    <string name="plus_app_button">加签</string>
    <string name="copy_app_button">抄送</string>
    <string name="pluscopy_search_person_title">人员列表</string>
    <string name="pluscopy_search_person_netparseerror">没有人员记录</string>
    <string name="pluscopy_search_person">工号/姓名,逗号分割</string>
    <string name="pluscopy_person_not_select">待选人员</string>
    <string name="pluscopy_person_yet_select">已选人员</string>
    <string name="pluscopy_person_checkAll">全选</string>
    <string name="pluscopy_person_resetAll">反选</string>
    <string name="pluscopy_person_btnSure">确定</string>
    <string name="pluscopy_person_btnSelect">选择</string>
    <string name="pluscopy_person_notselected">请选中要操作的记录</string>
    <string name="pluscopy_person_not_checkAll">没有选择记录</string>
    <string name="pluscopy_person_not_cancle">没有取消记录</string>
    <string name="pluscopy_person_selected">选择成功</string>
    <string name="lower_node_approve">下级节点审批人</string>
    <string name="lower_node_approve_radio">流转节点</string>
    <string name="lower_node_approve_struct">组织架构</string>
    <string name="lower_node_approve_result">选择结果</string>
    <string name="lower_node_approve_result_error">选择结果不能为空</string>
    <string name="lower_node_approve_spinner_user_title">节点人员</string>
    <string name="lower_node_approve_FConfirm">确定</string>
    <string name="lower_node_approve_fCancle">取消</string>
    <string name="lower_node_approve_button">下级节点</string>
    <string name="expense_main">我的报销</string>
    <string name="expense_flow">我的流水</string>
    <string name="expense_flow_add">新增流水</string>
    <string name="expense_flow_E">*</string>
    <string name="expense_flow_list">流水列表</string>
    <string name="expense_flow_list_netparseerror">没有流水记录</string>
    <string name="expense_flow_list_no_refresh_records">没有刷新记录</string>
    <string name="expense_flow_list_no_load_records">没有加载记录</string>
    <string name="expense_flow_list_btnSubmit">已上传</string>
    <string name="expense_flow_list_btnUpload">待上传</string>
    <string name="expense_flow_list_btnAdd">新增</string>
    <string name="expense_flow_list_search">消费时间</string>
    <string name="expense_flow_local_list">待上传列表</string>
    <string name="expense_flow_local_list_netparseerror">没有本地流水记录</string>
    <string name="expense_flow_local_list_batchUpload">上传</string>
    <string name="expense_flow_local_list_batchDelete">删除</string>
    <string name="expense_flow_local_list_batchUpload_noselect">请选中要上传的记录</string>
    <string name="expense_flow_local_list_batchDelete_noselect">请选中要删除的记录</string>
    <string name="expense_flow_local_list_batchUpload_success">上传成功</string>
    <string name="expense_flow_local_list_batchUpload_failure">上传失败</string>
    <string name="expense_flow_local_list_batchDelete_success">删除成功</string>
    <string name="expense_flow_local_list_batchDelete_failure">删除失败</string>
    <string name="expense_flow_detail">流水详情</string>
    <string name="expense_flow_detail_new">新建</string>
    <string name="expense_flow_detail_upload">待上传</string>
    <string name="expense_flow_detail_FExpendTime">消费时间：</string>
    <string name="expense_flow_detail_FExpendAmount">金额：</string>
    <string name="expense_flow_detail_FExpendType">消费类型</string>
    <string name="expense_flow_detail_FExpendAddress">消费地点</string>
    <string name="expense_flow_detail_FClient">客户名称</string>
    <string name="expense_flow_detail_FProject">项目名称</string>
    <string name="expense_flow_detail_FCause">消费事由</string>
    <string name="expense_flow_detail_FAccompany">有无陪同人员</string>
    <string name="expense_flow_detail_FAccompany_yes">有</string>
    <string name="expense_flow_detail_FAccompany_no">无</string>
    <string name="expense_flow_detail_FAccompanyPerson">陪同人员</string>
    <string name="expense_flow_detail_FAccompanyReason">无陪同原因</string>
    <string name="expense_flow_detail_button_temp">暂存</string>
    <string name="expense_flow_detail_button_upload">上传</string>
    <string name="expense_flow_detail_notInput_FExpendAmount">请输入金额</string>
    <string name="expense_flow_detail_notInput_FExpendAddress">请输入消费地点</string>
    <string name="expense_flow_detail_notInput_FCause">请输入消费事由</string>
    <string name="expense_flow_detail_show_local_success">暂存成功</string>
    <string name="expense_flow_detail_show_local_failure">暂存失败</string>
    <string name="expense_flow_detail_show_upload_success">上传成功</string>
    <string name="expense_flow_detail_show_upload_failure">上传失败</string>
    <string name="expense_flow_detail_travel_FStart">&#160;出发</string>
    <string name="expense_flow_detail_travel_FEnd">&#160;到达</string>
    <string name="expense_flow_detail_travel_Address">地点</string>
    <string name="expense_flow_detail_travel_Time">时间</string>
    <string name="expense_flow_detail_travel_FBusinessLevel">&#160;出差地级别</string>
    <string name="expense_flow_detail_socialize_NoCard">&#160;未刷卡</string>
    <string name="expense_flow_detail_socialize_FReason">原因</string>
    <string name="expense_flow_detail_socialize_FDescription">说明</string>
    <string name="search_hint">搜索</string>
    <string name="expense_flow_client_list">客户列表</string>
    <string name="expense_flow_client_list_search">客户搜索</string>
    <string name="expense_flow_client_list_netparseerror">没有客户记录</string>
    <string name="expense_flow_project_list">项目列表</string>
    <string name="expense_flow_project_list_search">项目搜索</string>
    <string name="expense_flow_project_list_netparseerror">没有项目记录</string>
    <string name="expensetaxi_main">打车报销</string>
    <string name="expensetaxi_main_title">记录信息</string>
    <string name="expensetaxi_title">查看乘车信息</string>
    <string name="expense_new">新增记录</string>
    <string name="expense_upload">待上传</string>
    <string name="expense_list">已上传</string>
    <string name="expense_upload_fail_notLogin">上传失败，请登陆后手动上传</string>
    <string name="expense_upload_fail_recordnotFull">上传失败，数据不完整</string>
    <string name="expense_upload_fail_reason">上传失败原因，</string>
    <string name="expense_upload_success">上传成功</string>
    <string name="expense_upload_batch_fail">请选中待上传的数据</string>
    <string name="expense_upload_delete_fail">请选中待删除的数据</string>
    <string name="expense_upload_delete_success">删除成功</string>
    <string name="expense_taxiinput_title">乘车信息补偿</string>
    <string name="expense_itemview_title">乘车信息详情</string>
    <string name="expense_upload_fail">上传服务调用失败</string>
    <string name="expense_have_upload_fail">检测您本地有未上传的打车信息，请先上传，不然更新最新程序时，会把原来存在的打车清空，造成数据丢失</string>
    <string name="expense_taxi_gps_status">GPS状态：</string>
    <string name="expense_taxi_gps_meters">GPS坐标：</string>
    <string name="expense_taxi_gps_disabled">GPS暂不可用</string>
    <string name="expense_taxi_gps_success">本次定位成功</string>
    <string name="expense_taxi_gps_open_failed">无法启动定位服务</string>
    <string name="expense_taxi_addr_descs">地址：</string>
    <string name="expense_taxi_addr_querying">地址定位中</string>
    <string name="expense_taxi_query_addr_failed">地址定位失败</string>
    <string name="expense_taxi_query_addr_success">地址定位成功</string>
    <string name="expense_taxi_start_taxi">打车开始</string>
    <string name="expense_taxi_end_taxi">打车结束</string>
    <string name="expense_taxi_amount">打车金额</string>
    <string name="expense_taxi_exit">是否退出</string>
    <string name="expense_taxi_gps_exit">您已经开启打车开关，确定要退出?</string>
    <string name="expense_adapte_endAddress">目的地:</string>
    <string name="expense_adapter_begin">始:</string>
    <string name="expense_adapter_to">至:</string>
    <string name="expense_startDate">出发时间</string>
    <string name="expense_startAddress">出发地</string>
    <string name="expense_endDate">到达时间</string>
    <string name="expense_endAddress">目的地</string>
    <string name="expense_amount">金额</string>
    <string name="expense_taxiinput_canel">取消</string>
    <string name="expense_itemview_upload">上传</string>
    <string name="expense_taxilist_all">全选</string>
    <string name="cot_main">通讯录</string>
    <string name="meeting_main">我的会议</string>
    <string name="develop_hour">研发工时</string>
    <string name="dh_list">工时列表</string>
    <string name="dh_confrim_list">工时确认</string>
    <string name="dh_add">工时新增</string>
    <string name="lync_main">Lync</string>
    <string name="attendance_main">我的考勤</string>
    <string name="market_main">我的销售</string>
    <string name="market_main_bid_search">报价查询</string>
    <string name="market_main_contract_search">合同查询</string>
    <string name="market_main_product_search">价格查询</string>
</resources>