<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<TableLayout
        android:id="@+id/expense_footer"
        android:layout_width="fill_parent"
        android:layout_height="55dip"
        android:stretchColumns="*"
        android:background="#343539"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip">
        
    <TableRow
        android:gravity="center_vertical"
        android:background="@drawable/corners_bg_red"
        android:padding="1dip">
   
    <Button
        android:id="@+id/expense_taxilist_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0.5dip"
        android:text="@string/expense_upload"
        style="@style/tabs_active" />

    <Button
        android:id="@+id/expense_taxilist_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0.5dip"
        android:layout_marginRight="0.5dip"
        android:text="@string/expense_list"
        style="@style/tabs_default" />
    
     <Button
        android:id="@+id/expense_taxilist_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0.5dip"
        android:text="@string/expense_new"
        style="@style/tabs_default_right" /> 

    </TableRow> 
 </TableLayout>
 <TableLayout
        android:id="@+id/expense_taxilist_checkbox"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:stretchColumns="*"
        android:background="#ffffff"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip">
    <TableRow
        android:gravity="center_vertical">
   
    <Button
        android:id="@+id/expense_taxilist_All"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_taxilist_all"
        android:background="@drawable/imgbtn_blue"
        style="@style/checkbox_button" /> 

    <Button
        android:id="@+id/expense_taxilist_Cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/btncancel"
        android:text="@string/expense_taxiinput_canel"
        style="@style/checkbox_button" />
    
     <Button
        android:id="@+id/expense_taxilist_BatchUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_itemview_upload"
        android:background="@drawable/btndel"
        style="@style/checkbox_button" /> 

    </TableRow>
  </TableLayout>
  </LinearLayout>