<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_right_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343539" >
    
    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fadingEdge="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dip"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/drawer_right_menu_myTask"
            style="@style/sidebar_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:background="@drawable/sidebarbutton"
            android:drawableTop="@drawable/sidebar_task"
            android:text="@string/tasklist_main" />

        <Button
            android:id="@+id/drawer_right_menu_expense"
            style="@style/sidebar_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:background="@drawable/sidebarbutton"
            android:drawableTop="@drawable/sidebar_baoxiao"
            android:text="@string/expense_main" />

        <Button
            android:id="@+id/drawer_right_menu_contacts"
            style="@style/sidebar_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:background="@drawable/sidebarbutton"
            android:drawableTop="@drawable/sidebar_cot"
            android:text="@string/cot_main" />

        <Button
            android:id="@+id/drawer_right_menu_meeting"
            style="@style/sidebar_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:background="@drawable/sidebarbutton"
            android:drawableTop="@drawable/sidebar_meeting"
            android:text="@string/meeting_main" />

        <Button
            android:id="@+id/drawer_right_menu_develop_hour"
            style="@style/sidebar_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:background="@drawable/sidebarbutton"
            android:drawableTop="@drawable/sidebar_worktime"
            android:text="@string/develop_hour" />

        <Button
            android:id="@+id/drawer_right_menu_attendance"
            style="@style/sidebar_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:background="@drawable/sidebarbutton"
            android:drawableTop="@drawable/sidebar_record"
            android:text="@string/attendance_main" />
        
         <Button
            android:id="@+id/drawer_right_menu_market"
            style="@style/sidebar_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:background="@drawable/sidebarbutton"
            android:drawableTop="@drawable/sidebar_market"
            android:text="@string/market_main" />

        <Button
            android:id="@+id/drawer_right_menu_richscan"
            style="@style/sidebar_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:background="@drawable/sidebarbutton"
            android:drawableTop="@drawable/sidebar_barcode"
            android:text="@string/action_richscan" />
    </LinearLayout>
	</ScrollView>
</FrameLayout>