<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
    
    <!-- 顶部开始 -->
    <include layout="@layout/main_header" />
    <!-- 顶部结束 -->
    
    <!-- 中间部分开始 -->
    <TextView
        android:id="@+id/login_textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/useinfo_login_detail"
        android:textSize="14sp"
        android:textColor="#5e5e5e"
        android:layout_marginTop="12dip"
        android:layout_marginLeft="25dip" />

	    <RelativeLayout        
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="12dip" >
		    <TableLayout
		        android:id="@+id/login_tablelayout1" 
		        android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:padding="0.5dip"
		        android:stretchColumns="0"
		        android:background="@drawable/corners_bg" > 
		    
		        <TableRow
		        android:id="@+id/login_tablerow1" 
		        android:layout_width="match_parent" 
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:background="@drawable/corners_bg_top" >
			        <TextView
			            android:id="@+id/login_tvUserName"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"  
			            android:layout_marginLeft="10dip"
			            android:text="@string/useinfo_login_account"
			            android:textSize="14sp"
			            android:textColor="#000000" />
			
			        <EditText
			            android:id="@+id/login_editUserName"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginRight="10dip"
			            android:ems="10"
			            android:inputType="number"
			            android:hint="@string/useinfo_login_tipusername" 
			            android:background="@drawable/btn_vision"  />
			        
			        <requestFocus />
		       </TableRow>
		    
			    <View 
			        android:layout_height="0.5dip"
			        android:background="#cfcfcf"  />    
				        
			    <TableRow
			        android:id="@+id/login_tablerow2" 
			        android:layout_width="match_parent" 
			        android:layout_height="wrap_content"
			        android:orientation="horizontal"
			        android:background="@drawable/corners_bg_bottom" >
			        <TextView
			            android:id="@+id/login_tvPassword"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginLeft="10dip"
			            android:text="@string/useinfo_login_password"
			            android:textSize="14sp"
			            android:textColor="#000000" />
			
			        <EditText
			            android:id="@+id/login_editPassWord"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"      
			            android:layout_marginRight="10dip"
			            android:ems="10"
			            android:inputType="textPassword"
			            android:hint="@string/useinfo_login_tippassword" 
			            android:background="@drawable/btn_vision"  />
			        
			    </TableRow>         		        
		    </TableLayout>
		    
		    <CheckBox
                android:id="@+id/login_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="10dip"
                android:layout_below="@+id/login_tablelayout1"
                android:text="@string/useinfo_login_isremember"
                android:textSize="14sp"
                style="@style/CheckBox" />		    
   
		    <Button	   
		        android:id="@+id/login_btnLogin"
		        android:layout_width="match_parent"
		        android:layout_height="45dip"
                android:layout_below="@+id/login_checkBox"
                android:layout_marginTop="10dip"
		        android:text="@string/useinfo_login_submit"
		        android:background="@drawable/loginbutton"
		        style="@style/button_text" />
		                  		    	    
	    </RelativeLayout>      
        <!-- 中间部分结束 -->
        
        <!-- 测试按钮开始 -->
	     <Button
	        android:id="@+id/login_test_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="OnTestClick"
	        android:text="测试按钮" /> 
	    
         <!-- 测试按钮结束 -->
</LinearLayout>
