<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="horizontal">
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"  >
        
        <TableRow
            android:gravity="center_vertical" >
    
		    <Button
		        android:id="@+id/market_main_bid_search"
		        style="@style/main_icon"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/menubutton"
		        android:clickable="true"
		        android:drawableTop="@drawable/market_bid"
		        android:text="@string/market_main_bid_search" />
		    
		    <Button
		        android:id="@+id/market_main_contract_search"
		        style="@style/main_icon"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/menubutton"
		        android:clickable="true"
		        android:drawableTop="@drawable/market_contract"
		        android:text="@string/market_main_contract_search" />
		    
		    <Button
                android:id="@+id/market_main_product_search"
                style="@style/main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menubutton"
                android:clickable="true"
                android:drawableTop="@drawable/market_product"
                android:text="@string/market_main_product_search" />
		    
		   
		 </TableRow>
		 
	</TableLayout>

</LinearLayout>