<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- 顶部开始 -->

    <include
        android:id="@+id/main_top"
        layout="@layout/main_header" />
    <!-- 顶部结束 -->

    <TextView
        android:id="@+id/main_hello"
        style="@style/main_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/main_top"
        android:background="#343539"
        android:paddingLeft="20dip"
        android:text="@string/main_hello" />

    <TextView
        android:id="@+id/main_txtFItemName"
        style="@style/main_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_top"
        android:layout_toRightOf="@+id/main_hello"
        android:background="#343539"
        android:paddingRight="5dip"
        android:text="" />

    <TextView
        android:id="@+id/main_txtWelcome"
        style="@style/main_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_top"
        android:layout_toRightOf="@+id/main_txtFItemName"
        android:background="#343539"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:text="" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_txtFItemName"
        android:stretchColumns="*" >

        <TableRow android:gravity="center_vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" >

                <Button
                    android:id="@+id/main_btnMyTask"
                    style="@style/main_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menubutton"
                    android:clickable="true"
                    android:drawableTop="@drawable/task"
                    android:text="@string/tasklist_main" />

                <ImageView
                    android:id="@+id/main_msg_MyTask_bk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/main_btnMyTask"
                    android:layout_alignTop="@+id/main_btnMyTask"
                    android:background="@drawable/msg_bk" />

                <TextView
                    android:id="@+id/main_msg_MyTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_msg_MyTask_bk"
                    android:layout_toLeftOf="@+id/main_msg_MyTask_bk"
                    android:background="@drawable/msg_red"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#ffffff"
                    android:textSize="10sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <Button
                android:id="@+id/main_btnExpense"
                style="@style/main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menubutton"
                android:clickable="true"
                android:drawableTop="@drawable/baoxiao"
                android:text="@string/expense_main" />

            <Button
                android:id="@+id/main_btnContacts"
                style="@style/main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menubutton"
                android:clickable="true"
                android:drawableTop="@drawable/cot"
                android:text="@string/cot_main" />
        </TableRow>

        <TableRow android:gravity="center_vertical" >

            <Button
                android:id="@+id/main_btnMeeting"
                style="@style/main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menubutton"
                android:clickable="true"
                android:drawableTop="@drawable/meetings"
                android:text="@string/meeting_main" />

            <Button
                android:id="@+id/main_btnDevelopHour"
                style="@style/main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menubutton"
                android:clickable="true"
                android:drawableTop="@drawable/time"
                android:text="@string/develop_hour" />

            <Button
                android:id="@+id/main_btnAttendance"
                style="@style/main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menubutton"
                android:clickable="true"
                android:drawableTop="@drawable/record"
                android:text="@string/attendance_main" />
        </TableRow>

        <TableRow android:gravity="center_vertical" >

            <Button
                android:id="@+id/main_btnMarket"
                style="@style/main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menubutton"
                android:clickable="true"
                android:drawableTop="@drawable/market"
                android:text="@string/market_main" />

            <Button
                android:id="@+id/main_btnlync"
                style="@style/main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menubutton"
                android:clickable="true"
                android:drawableTop="@drawable/lync"
                android:text="@string/lync_main" />
        </TableRow>
    </TableLayout>

</RelativeLayout>